[package]
name = "advent-of-code-2022"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2021"
publish = false

# Always optimize builds (we care about speed, not safety)
[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1"
chumsky = "0.8.0"
clap = { version = "3", features = ["derive"] }
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
